Add additional information to nearest neighbor notebook

--- a/nearest_neighbor.ipynb
+++ b/nearest_neighbor.ipynb
@@ -29,6 +29,15 @@
    "cell_type": "markdown",
    "source": [
     "## Algorithmic Implementation\n",
+    "### \"What is a Greedy Algorithm?\"\n",
+    "Greedy algorithms are algorithms that use locally optimal solutions to iteratively find something close to the global optimum solution. (Cares about finding solution for given node - not for entire graph).\n",
+    "They all follow the same general procedure:\n",
+    "1. Identify subproblems within a larger problem\n",
+    "2. Identify what a correct solution to the subproblems look like\n",
+    "3. Create an iterative process to iterate over all subproblems and find their solutions, creating a near optimum solution for the entire problem\n",
+    "As our nearest neighbor heuristic is a greedy algorithm, it follows the same structure. First, a start node is identified. Then, that is made the current node. That current node is passed into the find_nearest_neighbor() function, which will return the next city in the solution path. That city is then added to the set of all the nodes that have already been visited (those in the solution path). Each time a city checks for its nearest neighbors using the find_nearest_neighbor function, it also checks whether the adjacent node at the other side of the edge we're examining is in the solution path or not, so we do not add the node multiple times to the solution.\n",
+    "\n",
+    "### Time Complexity Calculation\n",
     "The algorithm has comments beside each line that indicate the time complexity of each individual step. Time complexity is most influenced by the highest order complexities. Within nearest neighbor, the time complexity is O(n^2), as the linear time complexity of checking each node during the process of visiting every city is multiplied by the linear time it takes to compare the weights of the edges between that city and every other city."
    ],
    "metadata": {
@@ -104,7 +113,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Testing on different graph types:\n",
+    "## Testing on different graph types\n",
     "The following cells contain code that tests how nearest neighbor performs on different types of graphs, ranging from directed to undirected, complete to incomplete."
    ],
    "metadata": {
@@ -273,6 +282,16 @@
     "        graph.remove_edge(edges_to_remove[0], edges_to_remove[1])\n",
     "length, path = tsp_nearest_neighbor(graph)\n",
     "print(f'Shortest path is {path} with length {length:.3f}')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### “Wait, why doesn’t Nearest Neighbor work on complete graphs?”\n",
+    "In short, the graph has to be complete to guarantee that it has a Hamiltonian circuit, meaning that all of the nodes can be connected with each only being visited once. If the existence of a Hamiltonian circuit is not guaranteed, as is the case with incomplete graphs, then simple nearest neighbor will not work, as it may try to go back on a node that it has already visited (if there are no unvisited adjacent nodes available, which may be the case if the graph is incomplete) and the algorithm doesn’t allow for that (because it keeps track of the cities that have been visited). If the algorithm did go back on nodes that have already been visited, then it would violate a constraint of the traveling salesman problem and would not be applicable to solving the problem."
    ],
    "metadata": {
     "collapsed": false
