Add intuitive explanation for held-karp time complexity

--- a/algorithm_complexity.ipynb
+++ b/algorithm_complexity.ipynb
@@ -74,7 +74,7 @@
     "\n",
     "\\end{align}$\n",
     "\n",
-    "This means part 1 runs in approximately $O(n^22^n)$ time.\n",
+    "This means part 1 runs in approximately $O(n^22^n)$ time. This can also be thought of intuitively as, for every subset of nodes (containing at least one node and not containing the starting node), choose one node in the set to find the shortest path to. To do that, find the shortest path through the rest of the nodes ending at each other node, and find the shortest. Repeat for every node in the set. Each set runs on the order of $n^2$ (loop once for last city, loop once for second-to-last city). There are on the order of $2^n$ sets, so it runs in $O(n^22^n)$ time.\n",
     "\n",
     "Part 2 runs in linear time. The setup before the loop takes constant time, as it is simply setting variables. Each line within the loop (dictionary lookup, addition, testing equality, setting variables) also each take constant time. The loop runs a total of $n-1$ times, so the whole section runs in linear time.\n",
     "\n",
