Make equation simplification prettier

--- a/algorithm_complexity.ipynb
+++ b/algorithm_complexity.ipynb
@@ -56,23 +56,51 @@
     "\n",
     "Part 1 runs in $O(n^22^n)$ time. Consider one loop of the outer for loop. Let $s$ be equal to `subset_size`. From there, there are $n-1 \\choose s$ different subsets of size $s$ to consider. For each of these, we must loop through it twice; once to determine the target node, `k`, and once to determine the node before the target, `m`. Since these are nested, this part runs in $O(s(s-1)f(s))$ where $f(s)$ is the runtime of the innermost loop. Note the $s-1$ is there as the loop is skipped if `m==k`. Every command in the innermost loop (checking equality, dictionary lookup, addition, setting `shortest`), runs in constant time. There, $f(s)$ is constant and the innermost two loops run in $O(s(s-1))$ time (we are keeping $s(s-1)$, as opposed to $s^2$, as it will help later). As these loops are done once for each set, one run of the outer loop runs in $O(s(s-1) {n-1 \\choose s})$ time. Because this is not constant with respect to $s$, the total runtime of this section is the sum of this expression over all values of $s$. That is, the runtime of part 2 is:\n",
     "\n",
-    "$\\begin{equation}\n",
+    "$\\begin{equation*}\n",
     "\\sum_{s=2}^{n-1}s(s-1){n-1 \\choose s}\n",
-    "\\end{equation}$\n",
+    "\\end{equation*}$\n",
     "\n",
     "Simplifying,\n",
     "\n",
-    "$\\begin{align}\n",
+    "$\\begin{equation*}\n",
+    "\\sum_{s=2}^{n-1}s(s-1){n-1 \\choose s}\n",
+    "\\end{equation*}$\n",
     "\n",
-    "&\\sum_{s=2}^{n-1}s(s-1){n-1 \\choose s} \\\\\n",
-    "=& \\sum_{s=2}^{n-1}s(s-1)\\frac{(n-1)!}{s!(n-1-s)!} \\\\\n",
-    "=& \\sum_{s=2}^{n-1}\\frac{(n-1)!}{(s-2)!(n-1-s)!} \\\\\n",
-    "=& \\sum_{s=2}^{n-1}\\frac{(n-1)(n-2)(n-3)!}{(s-2)!(n-3-(s-2))!} \\\\\n",
-    "=& (n-1)(n-2)\\sum_{s=2}^{n-1}{n-3 \\choose s-2} \\\\\n",
-    "=& (n-1)(n-2)\\sum_{t=0}^{n-3}{n-3 \\choose t} \\\\\n",
-    "=& (n-1)(n-2)2^{n-3} \\\\\n",
     "\n",
-    "\\end{align}$\n",
+    "\n",
+    "$\\begin{equation*}\n",
+    "=\\sum_{s=2}^{n-1}s(s-1)\\frac{(n-1)!}{s!(n-1-s)!}\n",
+    "\\end{equation*}$\n",
+    "\n",
+    "\n",
+    "\n",
+    "$\\begin{equation*}\n",
+    "= \\sum_{s=2}^{n-1}\\frac{(n-1)!}{(s-2)!(n-1-s)!}\n",
+    "\\end{equation*}$\n",
+    "\n",
+    "\n",
+    "\n",
+    "$\\begin{equation*}\n",
+    "= \\sum_{s=2}^{n-1}\\frac{(n-1)(n-2)(n-3)!}{(s-2)!(n-3-(s-2))!}\n",
+    "\\end{equation*}$\n",
+    "\n",
+    "\n",
+    "\n",
+    "$\\begin{equation*}\n",
+    "= (n-1)(n-2)\\sum_{s=2}^{n-1}{n-3 \\choose s-2}\n",
+    "\\end{equation*}$\n",
+    "\n",
+    "\n",
+    "\n",
+    "$\\begin{equation*}\n",
+    "= (n-1)(n-2)\\sum_{t=0}^{n-3}{n-3 \\choose t}\n",
+    "\\end{equation*}$\n",
+    "\n",
+    "\n",
+    "\n",
+    "$\\begin{equation*}\n",
+    "= (n-1)(n-2)2^{n-3}\n",
+    "\\end{equation*}$\n",
     "\n",
     "This means part 1 runs in approximately $O(n^22^n)$ time. This can also be thought of intuitively as, for every subset of nodes (containing at least one node and not containing the starting node), choose one node in the set to find the shortest path to. To do that, find the shortest path through the rest of the nodes ending at each other node, and find the shortest. Repeat for every node in the set. Each set runs on the order of $n^2$ (loop once for last city, loop once for second-to-last city). There are on the order of $2^n$ sets, so it runs in $O(n^22^n)$ time.\n",
     "\n",
